--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>CGSI | Obstetric and Gynaecological Society of Southern India</title>
+    <meta name="description" content="Advancing maternal and child health through clinical excellence and innovation since 1934." />
+    <meta name="author" content="OGSSI" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="OGSSI - Medical Excellence" />
+    <meta property="og:description" content="Leading the transformation of women's healthcare through innovation and advocacy." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <meta name="twitter:title" content="OGSSI" />
+    <meta name="twitter:description" content="Advancing maternal and child health." />
+  
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+   
   </head>
 
   <body>
